; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/extr_acpi_platform.c_acpi_platform_fill_resource.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/extr_acpi_platform.c_acpi_platform_fill_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_device = type { i32 }
%struct.resource = type { i32 }
%struct.device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.acpi_device*, %struct.resource*, %struct.resource*)* @acpi_platform_fill_resource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @acpi_platform_fill_resource(%struct.acpi_device* %0, %struct.resource* %1, %struct.resource* %2) #0 {
  %4 = alloca %struct.acpi_device*, align 8
  %5 = alloca %struct.resource*, align 8
  %6 = alloca %struct.resource*, align 8
  %7 = alloca %struct.device*, align 8
  store %struct.acpi_device* %0, %struct.acpi_device** %4, align 8
  store %struct.resource* %1, %struct.resource** %5, align 8
  store %struct.resource* %2, %struct.resource** %6, align 8
  %8 = load %struct.resource*, %struct.resource** %6, align 8
  %9 = load %struct.resource*, %struct.resource** %5, align 8
  %10 = bitcast %struct.resource* %8 to i8*
  %11 = bitcast %struct.resource* %9 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %10, i8* align 4 %11, i64 4, i1 false)
  %12 = load %struct.acpi_device*, %struct.acpi_device** %4, align 8
  %13 = getelementptr inbounds %struct.acpi_device, %struct.acpi_device* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call %struct.device* @acpi_get_first_physical_node(i32 %14)
  store %struct.device* %15, %struct.device** %7, align 8
  %16 = load %struct.device*, %struct.device** %7, align 8
  %17 = icmp ne %struct.device* %16, null
  br i1 %17, label %18, label %29

18:                                               ; preds = %3
  %19 = load %struct.device*, %struct.device** %7, align 8
  %20 = call i64 @dev_is_pci(%struct.device* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %29

22:                                               ; preds = %18
  %23 = load %struct.device*, %struct.device** %7, align 8
  %24 = call i32 @to_pci_dev(%struct.device* %23)
  %25 = load %struct.resource*, %struct.resource** %6, align 8
  %26 = call i32 @pci_find_resource(i32 %24, %struct.resource* %25)
  %27 = load %struct.resource*, %struct.resource** %6, align 8
  %28 = getelementptr inbounds %struct.resource, %struct.resource* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 4
  br label %29

29:                                               ; preds = %22, %18, %3
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local %struct.device* @acpi_get_first_physical_node(i32) #2

declare dso_local i64 @dev_is_pci(%struct.device*) #2

declare dso_local i32 @pci_find_resource(i32, %struct.resource*) #2

declare dso_local i32 @to_pci_dev(%struct.device*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
